актуализировал ассерты